--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,6 +10,40 @@ services:
       - NODE_ENV=development
     volumes:
       - ./:/home/node/app/
-      - node_modules:/home/node/app/node_modules/
-volumes:
-  node_modules: {}
+      - ./node_modules:/home/node/app/node_modules/
+
+  database:
+    container_name: postgres
+    image: postgres:latest
+    restart: always
+    environment:
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
+      POSTGRES_DB: price
+    ports:
+      - "5432:5432"
+    volumes:
+      - ./db-data:/var/lib/postgresql/data
+      - ./database:/docker-entrypoint-initdb.d
+      
+  pgadmin:
+    container_name: pgadmin
+    image: dpage/pgadmin4:latest
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "5050:80"
+      
+  fetching-service:
+    build: 
+      context: ./data-fetching-service
+      network: host
+    ports:
+      - 5001:5000
+    depends_on:
+      - database
+    volumes:
+      - ./data-fetching-service:/usr/src/app
+    entrypoint: python app.py
