--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "nuxt": "^v3.7.3",
     "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3"
+  },
+  "dependencies": {
+    "nuxt-highcharts": "^3.1.1",
+    "pg": "^8.11.3"
   }
 }
