--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,9 +1,10 @@
 services:
-  nuxt3-tailwindcss:
+  web:
     build:
       context: .
       dockerfile: Dockerfile
       target: development
+      network: host
     ports:
       - "3000:3000"
     environment:
@@ -25,16 +26,6 @@ services:
     volumes:
       - ./db-data:/var/lib/postgresql/data
       - ./database:/docker-entrypoint-initdb.d
-      
-  pgadmin:
-    container_name: pgadmin
-    image: dpage/pgadmin4:latest
-    restart: always
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@admin.com
-      PGADMIN_DEFAULT_PASSWORD: admin
-    ports:
-      - "5050:80"
       
   fetching-service:
     build: 
