--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "tailwindcss": "^3.3.3"
   },
   "dependencies": {
+    "@types/pg": "^8.10.9",
     "nuxt-highcharts": "^3.1.1",
     "pg": "^8.11.3"
   }
