--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,7 +11,7 @@ services:
       - NODE_ENV=development
     volumes:
       - ./web:/home/node/app/
-      - /home/node/app/node_modules/
+      - ./web/node_modules:/home/node/app/node_modules/
 
   database:
     container_name: postgres
