--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,38 +1,22 @@
-FROM node:18.17.1-alpine3.17 as node-base
-# docker build --no-cache --progress plain -t ricardobalk/nuxt3-tailwindcss:latest --target <target> -f Dockerfile .
+# syntax = docker/dockerfile:1
 
-RUN apk add --no-cache git
+ARG NODE_VERSION=18.14.2
 
-USER node
-ENV NPM_CONFIG_PREFIX=/home/node/.npm
-ENV PATH=$PATH:/home/node/.npm/bin
+FROM node:${NODE_VERSION}-slim as base
 
+ENV NODE_ENV=development
 
-RUN mkdir -p  "${HOME}/app" \
-              "${NPM_CONFIG_PREFIX}/bin"
+WORKDIR /src
 
-RUN printf  "Node version %s, npm version %s, yarn version %s\n\n" \
-            "$(node -v)" "$(npm -v)" "$(yarn -v)"
+# Build
+FROM base as build
 
-FROM node-base as dependencies
-USER node
-WORKDIR /home/node/app
-COPY --chown=node:node . .
-RUN yarn
-ENTRYPOINT ["yarn", "run"]
+COPY package*.json ./
+RUN npm install
 
-FROM dependencies as development
-USER node
-EXPOSE 3000
-CMD ["dev"]
-# && docker run -it -p 3000:3000 -v "$(pwd):/home/node/app:cached" ricardobalk/nuxt3-tailwindcss:latest
+# Run
 
-FROM dependencies as build
-USER node
-RUN ["yarn", "run", "generate"]
+FROM build as development
+COPY --from=build /src/node_modules /src/node_modules
 
-FROM nginx:1.25.2-alpine3.18-slim as deployment
-COPY --from=build /home/node/app/.output/public /usr/share/nginx/html
-EXPOSE 80 443
-CMD ["nginx", "-g", "daemon off;"]
-# && docker run -it -p 80:80 -p 443:443 -v "$(pwd)/nginx.conf:/etc/nginx/conf.d/default.conf:cached" ricardobalk/nuxt3-tailwindcss:latest
+CMD [ "npm", "run", "dev" ]
