--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,8 +10,7 @@ services:
     environment:
       - NODE_ENV=development
     volumes:
-      - ./web:/home/node/app/
-      - ./web/node_modules:/home/node/app/node_modules/
+      - ./web:/src
 
   database:
     container_name: postgres
